sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: not found: value j
      setValue(j+ecart,getValue(j))
               ^AlgShellSort:17: error: not found: value j
      setValue(j+ecart,getValue(j))
                                ^